专辑列表滚动动画

--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
                         <ul>
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-shoucang"></use>
-                            </svg>222
+                            </svg>999+
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-pinglun"></use>
                             </svg>999+
                             <svg class="icon" aria-hidden="true">
                                 <use xlink:href="#icon-dianzan1"></use>
-                            </svg>555
+                            </svg>999+
                         </ul>
                     </div>
                     <div class="areaBar">
                         <div class="bar">
                             <div class="insideBar"></div>
                         </div>
-                        <div class="time">0:50</div>
+                        <div class="time">3:50</div>
                     </div>
 
                     <div class="name">伍伍慧</div>
@@ -66,22 +66,24 @@
             </div>
         </main>
         <footer>
-            <div class="box">
+            <div class="layout">
                 <svg class="icon buttonLeft" aria-hidden="true">
                     <use xlink:href="#icon-left"></use>
                 </svg>
                 <svg class="icon buttonRight" aria-hidden="true">
                     <use xlink:href="#icon-right"></use>
                 </svg>
-                <ul>
-                    <li>
-                        <div class="selector" style="background-image: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1537294456162&di=e84ee1d0aa914674af88ccedf71be47b&imgtype=0&src=http%3A%2F%2Fi1.hdslb.com%2Fbfs%2Farchive%2F92d06edb86b960e51913186656cbb80cd2f16162.jpg)"></div>
-                        <h3>吉他曲</h3>
-                    </li>
-                </ul>
+                <div class="box">
 
+                    <ul>
+                        <li>
+                            <div class="selector" style="background-image: url(https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1537294456162&di=e84ee1d0aa914674af88ccedf71be47b&imgtype=0&src=http%3A%2F%2Fi1.hdslb.com%2Fbfs%2Farchive%2F92d06edb86b960e51913186656cbb80cd2f16162.jpg)"></div>
+                            <h3>吉他曲</h3>
+                        </li>
+                    </ul>
+
+                </div>
             </div>
-
         </footer>
     </section>
     <div class="bg"></div>
