加载歌曲信息并改变页面

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="referrer" content="never"> <!--解决无法获取百度音乐问题-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FM</title>
@@ -21,10 +22,10 @@
         }
     </style>
     <section>
-        <main>
+        <main class = 'page-music'>
             <div id="card" class="card">
                 <div class="left">
-                    <img>
+                    <img class="picture">
                     <span class="buttons">
                         <svg class="icon" aria-hidden="true">
                             <use class=" a" xlink:href="#icon-shoucang"></use>
