--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="referrer" content="never"> <!--解决无法获取百度音乐问题-->
+    <meta name="referrer" content="never">
+    <!--解决无法获取百度音乐问题-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>FM</title>
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_811906_arcmookvd2n.css">
 </head>
 
 <body>
@@ -22,47 +24,35 @@
         }
     </style>
     <section>
-        <main class = 'page-music'>
+        <main class='page-music'>
             <div id="card" class="card">
                 <div class="left">
                     <img class="picture">
                     <span class="buttons">
-                        <svg class="icon" aria-hidden="true">
-                            <use class=" a" xlink:href="#icon-shoucang"></use>
-                        </svg>
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-zanting"></use>
-                        </svg>
-                        <svg class="icon" aria-hidden="true">
-                            <use xlink:href="#icon-xiayiqu"></use>
-                        </svg>
+                        <span class="btn-collect iconfont icon-collect"></span>
+                        <span class="btn-play iconfont icon-pause"></span>
+                        <span class="btn-next iconfont icon-next"></span>
                     </span>
                 </div>
                 <div class="right">
-                    <span class="tag">指弹</span>
+                    <span class="tag">漫步春天</span>
                     <h1>moon river</h1>
                     <div class="i">
                         <ul>
-                            <svg class="icon" aria-hidden="true">
-                                <use xlink:href="#icon-shoucang"></use>
-                            </svg>999+
-                            <svg class="icon" aria-hidden="true">
-                                <use xlink:href="#icon-pinglun"></use>
-                            </svg>999+
-                            <svg class="icon" aria-hidden="true">
-                                <use xlink:href="#icon-dianzan1"></use>
-                            </svg>999+
+                            <li><span class="iconfont icon-dianzan1"></span>999+</li>
+                            <li><span class="iconfont icon-pinglun"></span>999+</li>
+                            <li><span class="iconfont icon-collect"> </span>520</li>
                         </ul>
                     </div>
                     <div class="areaBar">
                         <div class="bar">
                             <div class="insideBar"></div>
                         </div>
-                        <div class="time">3:50</div>
+                        <div class="time">0:00</div>
                     </div>
 
                     <div class="name">伍伍慧</div>
-                    <div class="text">纯音乐不需要歌词</div>
+                    <div class="lyric">纯音乐不需要歌词</div>
                 </div>
             </div>
         </main>
