进度条支持点击

--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
                             <li><span class="iconfont icon-collect"> </span>520</li>
                         </ul>
                     </div>
-                    <div class="areaBar">
-                        <div class="bar">
-                            <div class="insideBar"></div>
+                    <div class="areaBar"><div class="bar"><div class="insideBar"></div>
                         </div>
                         <div class="time">0:00</div>
                     </div>
