添加歌词选色功能

--- a/index.html
+++ b/index.html
@@ -44,13 +44,23 @@
                             <li><span class="iconfont icon-collect"> </span>520</li>
                         </ul>
                     </div>
-                    <div class="areaBar"><div class="bar"><div class="insideBar"></div>
+                    <div class="areaBar">
+                        <div class="bar">
+                            <div class="insideBar"></div>
                         </div>
                         <div class="time">0:00</div>
                     </div>
 
                     <div class="name">伍伍慧</div>
-                    <div class="lyric">纯音乐不需要歌词</div>
+                    <div class="lyric">
+                        <p>纯音乐不需要歌词</p>
+                        <ol class="selectorColor clearfix">
+                            <li class="aquamarine"></li>
+                            <li class="red"></li>
+                            <li class="black"></li>
+                            <li class="green"></li>
+                        </ol>
+                        </div>
                 </div>
             </div>
         </main>
