--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </span>
                 </div>
                 <div class="right">
-                    <span class="tag">漫步春天</span>
+                    <span class="tag">流行</span>
                     <h1>moon river</h1>
                     <div class="i">
                         <ul>
