点击改变歌曲进度功能逻辑优化

--- a/index.html
+++ b/index.html
@@ -30,18 +30,18 @@
                     <img class="picture">
                     <span class="buttons">
                         <span class="btn-collect iconfont icon-collect"></span>
-                        <span class="btn-play iconfont icon-pause"></span>
+                        <span class="btn-play iconfont icon-play"></span>
                         <span class="btn-next iconfont icon-next"></span>
                     </span>
                 </div>
                 <div class="right">
-                    <span class="tag">流行</span>
-                    <h1>moon river</h1>
+                    <span class="tag">漫步春天</span>
+                    <h1>奇迹的山</h1>
                     <div class="i">
                         <ul>
                             <li><span class="iconfont icon-dianzan1"></span>999+</li>
                             <li><span class="iconfont icon-pinglun"></span>999+</li>
-                            <li><span class="iconfont icon-collect"> </span>520</li>
+                            <li><span class="iconfont icon-collect"> </span>999+</li>
                         </ul>
                     </div>
                     <div class="areaBar">
@@ -51,13 +51,13 @@
                         <div class="time">0:00</div>
                     </div>
 
-                    <div class="name">伍伍慧</div>
+                    <div class="name">岸部真明</div>
                     <div class="lyric">
                         <p>纯音乐不需要歌词</p>
                         <ol class="selectorColor clearfix">
                             <li class="aquamarine"></li>
                             <li class="red"></li>
-                            <li class="black"></li>
+                            <li class="white"></li>
                             <li class="green"></li>
                         </ol>
                         </div>
@@ -86,11 +86,9 @@
         </footer>
     </section>
     <div class="bg"></div>
-
+    <script src="//at.alicdn.com/t/font_811906_66l64erk6kv.js"></script>
     <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="./js/main.js"></script>
-    <script src="//at.alicdn.com/t/font_811906_iiift819zz.js"></script>
-
 </body>
 
 </html>
