初识状态下,点击播放按钮即可播放

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </span>
                 </div>
                 <div class="right">
-                    <span class="tag">漫步春天</span>
+                    <span class="tag">KTV金曲</span>
                     <h1>奇迹的山</h1>
                     <div class="i">
                         <ul>
